# boolean-benchmark-runners

./: .gitignore  .gitmodules  README.md  bootstrap-vcpkg.py  build-all.py
_common/build_helpers/python/: builder_helpers.py
_common/cpp/include/runner_mesh_helpers/: io.hh  mesh.hh  obj.hh  off.hh  stl.hh
_common/cpp/include/runner_utils/: cli.hh  ops.hh  progress.hh  run_loop.hh  timer.hh
blender/5.1/: build.py  runner.yaml
blender/5.1/src/: driver.py  runner.py
carve/2014-9/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
carve/2014-9/src/: main.cpp
cgal/6.1.1/corefine/epec/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
cgal/6.1.1/corefine/epec/src/: main.cpp  mesh_io.hh  runner_types.hh
cgal/6.1.1/nef/exact_homogeneous_integer/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
cgal/6.1.1/nef/exact_homogeneous_integer/src/: main.cpp  mesh_io.hh  runner_types.hh
cork/2016-3/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
cork/2016-3/src/: main.cpp
docs/: Adding a New Runner Guide.md  Build Script Spec.md  Runner IO Contract.md  Runner Manifest Spec.md  Runner Overview.md
geogram/1.9.8/boolean/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
geogram/1.9.8/boolean/src/: main.cpp
interactive-and-robust-mesh-booleans/2024-6/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
interactive-and-robust-mesh-booleans/2024-6/src/: main.cpp
manifold/3.4.0/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
manifold/3.4.0/src/: main.cpp
mcut/1.3.0/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
mcut/1.3.0/fix/: mcut_extra_includes.hh
mcut/1.3.0/src/: main.cpp
mesh-arrangements-for-solid-geometry/2.6.0/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
mesh-arrangements-for-solid-geometry/2.6.0/src/: main.cpp
meshlib/3.1.1.211/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
meshlib/3.1.1.211/src/: main.cpp
quickcsg/2022-10/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
quickcsg/2022-10/src/: main.cpp
quickcsg/2022-10/src/compat/: unistd.h
solidean/2026.1/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
solidean/2026.1/src/: main.cpp
trueform/0.7.0/: .gitignore  CMakeLists.txt  build.py  runner.yaml  vcpkg.json
trueform/0.7.0/src/: main.cpp
vtk/9.6.0/: .gitignore
vtk/9.6.0/boolean_polydata/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
vtk/9.6.0/boolean_polydata/src/: main.cpp
vtk/9.6.0/loop_boolean/: CMakeLists.txt  build.py  runner.yaml  vcpkg.json
vtk/9.6.0/loop_boolean/src/: main.cpp
